--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/launch_param_builder
-	previous = 
-	base = 474ec4a
+	previous = 474ec4a
+	base = 23443c8
 	trim = 
 	trimbase = 
