--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/launch_param_builder
-	previous = 
-	base = 8c93013
+	previous = 8c93013
+	base = 997dd74
 	trim = 
 	trimbase = 
