Imported upstream version '0.1.1' of 'upstream'

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,10 @@ jobs:
     strategy:
       matrix:
         env:
+          - ROS_DISTRO: humble
+            ROS_REPO: main
+          - ROS_DISTRO: humble
+            ROS_REPO: testing
           - ROS_DISTRO: rolling
             ROS_REPO: main
           - ROS_DISTRO: rolling
