Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0": ["Jafar Abdi", "jafar@picknik.ai"]}
+{"0.1.1": ["Jafar Abdi", "jafar@picknik.ai"], "0.1.0": ["Jafar Abdi", "jafar@picknik.ai"]}
