--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0-1": ["Fri Jan 21 2022", "Jafar Abdi", "jafar@picknik.ai"]}
+{"0.1.1-1": ["Thu May 26 2022", "Jafar Abdi", "jafar@picknik.ai"], "0.1.0-1": ["Fri Jan 21 2022", "Jafar Abdi", "jafar@picknik.ai"]}
